--- a/012_array_practice_problems/012_02_Array Pair Sum_solution.ipynb
+++ b/012_array_practice_problems/012_02_Array Pair Sum_solution.ipynb
@@ -62,11 +62,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pair_sum(arr, k):\n",
+    "\n",
+    "    #edge-case check\n",
+    "    if len(arr) < 2:\n",
+    "        return\n",
     "\n",
     "    seen_set: [set] = set()\n",
     "    output_set: [set] = set()\n",
@@ -88,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +101,7 @@
        "2"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
